fixed spacing, size, added hover

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -51,7 +51,13 @@ img {
 
 .imgbox {
     display: inline-block;
-    padding: 30px;
+}
+
+.imgbox .imgwrap {
+    position: relative;
+    margin-bottom: 1rem;
+    background: var(--main-gradient);
+    border-radius: 10px;
 }
 
 .projects .links {
@@ -60,18 +66,39 @@ img {
     gap: 1.5em;
 }
 
-.projects .links > a {
+.projects a {
     word-spacing: 1em;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 0.8em;
+    font-size: 0.7em;
     font-weight: 500;
     color: var(--main-black);
 }
 
-a:hover {
-    color: var(--main-purple)
+.fa-binoculars {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 3rem;
+    color: #fff;
+    transform: translate(-50%,-50%);    
+
 }
+
+.imgwrap:hover .fa-binoculars {
+    display: block;
+}
+
+a:hover {
+    color: var(--main-purple);
+}
+
+img:hover {
+    opacity: 20%;  
+}
+
+.
 
 /* projects end */
 
